feat: HTML : allow bitcoin link in footer

--- a/docs/_config.dev.yml
+++ b/docs/_config.dev.yml
@@ -52,6 +52,7 @@ author:
   linkedin  : 1
   github    : 1
   npm       : 1
+  bitcoin   : 1
 
 
 ## => GitHub Repository (if the site is hosted by GitHub)
