--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,7 @@ author:
   linkedin  : # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
   github    : # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
+  bitcoin   : # Bitcoin address
 
 
 ## => GitHub Repository (if the site is hosted by GitHub)
