--- a/docs/_config.dev.yml
+++ b/docs/_config.dev.yml
@@ -119,7 +119,7 @@ sharing:
 ## => Comments
 ##############################
 comments:
-  provider: false # false (default), "disqus", "gitalk", "valine", "custom"
+  provider: false # false (default), "disqus", "gitalk", "valine", "hashover", "custom"
 
   ## Disqus
   disqus:
@@ -142,6 +142,10 @@ comments:
     app_key     : # LeanCloud App key
     placeholder : # Prompt information
 
+  ## Hashover
+  # please refer to http://tildehash.com/?page=hashover for more info
+  hashover:
+    src: # URL to hashover.php file
 
 ## => Pageview
 ##############################
