--- a/_data/variables.yml
+++ b/_data/variables.yml
@@ -54,11 +54,11 @@ sources:
     openpgp: 'https://www.unpkg.com/openpgp@4.6.0/dist/openpgp.min.js' # bootcdn not available
   unpkg:
     font_awesome: 'https://use.fontawesome.com/releases/v5.0.13/css/all.css'
-    jquery: 'https://unpkg.com/jquery@3.3.1/dist/jquery.min.js'
+    jquery: 'https://unpkg.com/jquery/dist/jquery.min.js'
     leancloud_js_sdk: '//cdn.jsdelivr.net/npm/leancloud-storage@3.13.2/dist/av-min.js'
-    chart: 'https://unpkg.com/chart.js@2.7.2/dist/Chart.min.js'
+    chart: 'https://unpkg.com/chart.js/dist/Chart.min.js'
     gitalk:
-      js: 'https://unpkg.com/gitalk@1.2.2/dist/gitalk.min.js'
-      css: 'https://unpkg.com/gitalk@1.2.2/dist/gitalk.css'
+      js: 'https://unpkg.com/gitalk/dist/gitalk.min.js'
+      css: 'https://unpkg.com/gitalk/dist/gitalk.css'
     valine: 'https//unpkg.com/valine/dist/Valine.min.js'
     openpgp: 'https://www.unpkg.com/openpgp/dist/openpgp.min.js'
