--- a/_data/variables.yml
+++ b/_data/variables.yml
@@ -6,7 +6,7 @@ default:
     root: /
     home: /
     archive:  /blog/archive.html
-    rss:  /feed.xml
+    rss:  /blog/feed.xml
   mathjax: false
   mathjax_autoNumber: false
   mermaid: false
