--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -16,3 +16,7 @@ Philippe Helal:
   github    : ctrl-q # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
   bitcoin   : 1C5AmTsLQCrGZAezcGKSm6gEgyBpAcM9kD # Bitcoin address
+
+Yannis Ikni:
+  name: Yannis Ikni
+  
