--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ author:
   name      : Philippe Helal
   url       :
   avatar    : # path or url of avatar image (square)
-  bio       : Computer Science Graduate Student at Université de Montréal
+  bio       : Data Engineering Consultant
   email     : /#contact
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
@@ -47,7 +47,7 @@ author:
   medium    : # "user_name" the last part of your profile url, e.g. https://medium.com/user_name
   zhihu     : # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
   douban    : # "user_name" the last part of your profile url, e.g. https://www.douban.com/people/user_name
-  linkedin  : philippehelal # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
+  linkedin  : # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
   github    : ctrl-q # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
   bitcoin   : 1C5AmTsLQCrGZAezcGKSm6gEgyBpAcM9kD # Bitcoin address
